--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.6.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
