--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.6.5",
+    "axios": "^0.27.2",
     "jasmine": "^4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "ts-node": "^10.9.1",
