--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.6.5",
+    "@types/supertest": "^2.0.12",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "jasmine": "^4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "supertest": "^6.2.4"
   }
 }
