--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "nodemon": "nodemon src/express_api_intro.ts"
+    "nodemon": "nodemon src/expressApiIntro.ts"
   },
   "keywords": [],
   "author": "",
