--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.18.1",
     "supertest": "^6.2.4"
   }
