--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.6.5",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jasmine": "^4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -28,6 +30,7 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "express": "^4.18.1",
+    "pg": "^8.7.3",
     "supertest": "^6.2.4"
   }
 }
