--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PASSWORD=password123
 POSTGRES_DB=full_stack_dev
+POSTGRES_TEST=full_stack_test
 POSTGRES_USER=full_stack_user
 PORT=3001
+ENV=dev
