--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "nodemon": "nodemon src/expressApiIntro.ts",
+    "nodemon": "nodemon src/_Section_2/server.ts",
     "database-test": "cross-env ENV=test db-migrate --env test up && npm run jasmine && db-migrate db:drop test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.6.5",
@@ -29,6 +30,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csvtojson": "^2.0.10",
     "db-migrate": "^0.11.13",
