Updates .env file to include encryption cariables

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ POSTGRES_TEST=full_stack_test
 POSTGRES_USER=full_stack_user
 PORT=3001
 ENV=dev
+BCRYPT_PASSWORD=ThisWillBeMy1stPepper!
+SALT_ROUNDS=10
