--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.6.5",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
@@ -32,12 +33,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csvtojson": "^2.0.10",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "supertest": "^6.2.4"
   }
